[gd_scene load_steps=29 format=4 uid="uid://cxwywc5nqm2qb"]

[ext_resource type="Script" uid="uid://dfegw3i7se4cl" path="res://scripts/attic_01.gd" id="1_bwckg"]
[ext_resource type="Texture2D" uid="uid://vo32gu3u4roh" path="res://assets/images/outside_sky.png" id="2_uslh7"]
[ext_resource type="Texture2D" uid="uid://datf1hji0i7tk" path="res://assets/images/mirror.png" id="3_lwryk"]
[ext_resource type="Texture2D" uid="uid://cfkoed3db0d10" path="res://assets/images/area/bathroom_01.png" id="4_qusso"]
[ext_resource type="Texture2D" uid="uid://c454p6pbpo14r" path="res://assets/images/area/attic_01.png" id="4_uslh7"]
[ext_resource type="Texture2D" uid="uid://xshsawfgrgay" path="res://assets/images/world_tile.png" id="5_eqhgu"]
[ext_resource type="PackedScene" uid="uid://dkoabgga4m8lb" path="res://scenes/chars/player.tscn" id="6_bwckg"]
[ext_resource type="Texture2D" uid="uid://g8hgmn7bcgeq" path="res://assets/images/box_01.png" id="6_uslh7"]
[ext_resource type="Texture2D" uid="uid://crr58ywdjjgkv" path="res://assets/images/beer_pile.png" id="7_lwryk"]
[ext_resource type="PackedScene" uid="uid://b6lq8cq24br7h" path="res://scenes/texts/interact_prompt.tscn" id="9_7c160"]
[ext_resource type="PackedScene" uid="uid://ddc7qcadw4bq1" path="res://scenes/items/wallet.tscn" id="10_bwckg"]
[ext_resource type="PackedScene" uid="uid://crtoimk5yma2x" path="res://scenes/items/door.tscn" id="11_irxf6"]
[ext_resource type="Texture2D" uid="uid://cuiahy1sov4p4" path="res://assets/images/light_tri.png" id="11_qusso"]
[ext_resource type="AudioStream" uid="uid://k1u0kl37sxyf" path="res://assets/sfxs/wind-18030.mp3" id="12_qusso"]
[ext_resource type="PackedScene" uid="uid://d3i6btwaa5345" path="res://scenes/texts/dialogue.tscn" id="15_eqhgu"]
[ext_resource type="Texture2D" uid="uid://dkgk1hgm6uvt2" path="res://assets/images/clouds.png" id="16_y5qjx"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cdkw2"]
texture = ExtResource("2_uslh7")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:1/0 = 0
2:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_82ahj"]
texture = ExtResource("3_lwryk")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xv5gm"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_cdkw2")
sources/2 = SubResource("TileSetAtlasSource_82ahj")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lwryk"]
texture = ExtResource("4_uslh7")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
29:0/0 = 0
28:0/0 = 0
27:0/0 = 0
26:0/0 = 0
25:0/0 = 0
24:0/0 = 0
23:0/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
20:2/0 = 0
19:2/0 = 0
18:2/0 = 0
17:2/0 = 0
16:2/0 = 0
15:2/0 = 0
14:2/0 = 0
13:2/0 = 0
12:2/0 = 0
11:2/0 = 0
10:2/0 = 0
9:2/0 = 0
8:2/0 = 0
7:2/0 = 0
6:2/0 = 0
5:2/0 = 0
4:2/0 = 0
29:3/0 = 0
28:3/0 = 0
27:3/0 = 0
26:3/0 = 0
25:3/0 = 0
24:3/0 = 0
23:3/0 = 0
22:3/0 = 0
21:1/0 = 0
22:1/0 = 0
26:4/0 = 0
25:4/0 = 0
24:4/0 = 0
23:4/0 = 0
22:4/0 = 0
21:4/0 = 0
20:4/0 = 0
19:4/0 = 0
18:4/0 = 0
17:4/0 = 0
16:4/0 = 0
15:4/0 = 0
14:4/0 = 0
13:4/0 = 0
12:4/0 = 0
11:4/0 = 0
10:4/0 = 0
9:4/0 = 0
8:4/0 = 0
7:4/0 = 0
6:4/0 = 0
5:4/0 = 0
4:4/0 = 0
3:4/0 = 0
2:4/0 = 0
29:5/0 = 0
28:5/0 = 0
27:5/0 = 0
26:5/0 = 0
25:5/0 = 0
24:5/0 = 0
23:5/0 = 0
22:5/0 = 0
21:5/0 = 0
20:5/0 = 0
19:5/0 = 0
18:5/0 = 0
21:3/0 = 0
20:3/0 = 0
19:3/0 = 0
18:3/0 = 0
17:3/0 = 0
16:3/0 = 0
15:3/0 = 0
14:3/0 = 0
13:3/0 = 0
12:3/0 = 0
11:3/0 = 0
10:3/0 = 0
9:3/0 = 0
8:3/0 = 0
7:3/0 = 0
6:3/0 = 0
5:3/0 = 0
4:3/0 = 0
3:3/0 = 0
29:4/0 = 0
28:4/0 = 0
27:4/0 = 0
17:5/0 = 0
16:5/0 = 0
15:5/0 = 0
14:5/0 = 0
13:5/0 = 0
12:5/0 = 0
27:6/0 = 0
26:6/0 = 0
25:6/0 = 0
24:6/0 = 0
23:6/0 = 0
22:6/0 = 0
21:6/0 = 0
20:6/0 = 0
19:6/0 = 0
18:6/0 = 0
17:6/0 = 0
16:6/0 = 0
15:6/0 = 0
14:6/0 = 0
13:6/0 = 0
12:6/0 = 0
11:6/0 = 0
10:6/0 = 0
9:6/0 = 0
8:6/0 = 0
7:6/0 = 0
6:6/0 = 0
5:6/0 = 0
4:6/0 = 0
3:6/0 = 0
2:6/0 = 0
1:6/0 = 0
0:6/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
29:6/0 = 0
28:6/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sgxps"]
texture = ExtResource("4_qusso")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0

[sub_resource type="TileSet" id="TileSet_nbnyv"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_sgxps")
sources/0 = SubResource("TileSetAtlasSource_lwryk")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gu5dh"]
texture = ExtResource("5_eqhgu")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_4meus"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_gu5dh")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qusso"]
texture = ExtResource("6_uslh7")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eqhgu"]
texture = ExtResource("7_lwryk")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0

[sub_resource type="TileSet" id="TileSet_48t7m"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_qusso")
sources/1 = SubResource("TileSetAtlasSource_eqhgu")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uslh7"]
size = Vector2(20, 271)

[node name="Attic01" type="Node2D"]
script = ExtResource("1_bwckg")

[node name="Darkness" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="Outside" type="TileMapLayer" parent="TileMap"]
z_index = -5
tile_map_data = PackedByteArray("AAAKAPz/AAAAAAAAAAAKAP3/AAAAAAEAAAAKAP7/AAAAAAIAAAALAPz/AAABAAAAAAALAP3/AAABAAEAAAALAP7/AAABAAIAAAAMAPz/AAACAAAAAAAMAP3/AAACAAEAAAAMAP7/AAACAAIAAAA=")
tile_set = SubResource("TileSet_xv5gm")

[node name="Background" type="TileMapLayer" parent="TileMap"]
z_index = -1
tile_map_data = PackedByteArray("AAD9//n/AAAAAAAAAAD9//r/AAAAAAEAAAD9//v/AAAAAAIAAAD9//z/AAAAAAMAAAD9//3/AAAAAAQAAAD9//7/AAAAAAUAAAD9////AAAAAAYAAAD+//n/AAABAAAAAAD+//r/AAABAAEAAAD+//v/AAABAAIAAAD+//z/AAABAAMAAAD+//3/AAABAAQAAAD+//7/AAABAAUAAAD+////AAABAAYAAAD///n/AAACAAAAAAD///r/AAACAAEAAAD///v/AAACAAIAAAD///z/AAACAAMAAAD///3/AAACAAQAAAD///7/AAACAAUAAAD/////AAACAAYAAAAAAPn/AAADAAAAAAAAAPr/AAADAAEAAAAAAPv/AAADAAIAAAAAAPz/AAADAAMAAAAAAP3/AAADAAQAAAAAAP7/AAADAAUAAAAAAP//AAADAAYAAAABAPn/AAAEAAAAAAABAPr/AAAEAAEAAAABAPv/AAAEAAIAAAABAPz/AAAEAAMAAAABAP3/AAAEAAQAAAABAP7/AAAEAAUAAAABAP//AAAEAAYAAAACAPn/AAAFAAAAAAACAPr/AAAFAAEAAAACAPv/AAAFAAIAAAACAPz/AAAFAAMAAAACAP3/AAAFAAQAAAACAP7/AAAFAAUAAAACAP//AAAFAAYAAAADAPn/AAAGAAAAAAADAPr/AAAGAAEAAAADAPv/AAAGAAIAAAADAPz/AAAGAAMAAAADAP3/AAAGAAQAAAADAP7/AAAGAAUAAAADAP//AAAGAAYAAAAEAPn/AAAHAAAAAAAEAPr/AAAHAAEAAAAEAPv/AAAHAAIAAAAEAPz/AAAHAAMAAAAEAP3/AAAHAAQAAAAEAP7/AAAHAAUAAAAEAP//AAAHAAYAAAAFAPn/AAAIAAAAAAAFAPr/AAAIAAEAAAAFAPv/AAAIAAIAAAAFAPz/AAAIAAMAAAAFAP3/AAAIAAQAAAAFAP7/AAAIAAUAAAAFAP//AAAIAAYAAAAGAPn/AAAJAAAAAAAGAPr/AAAJAAEAAAAGAPv/AAAJAAIAAAAGAPz/AAAJAAMAAAAGAP3/AAAJAAQAAAAGAP7/AAAJAAUAAAAGAP//AAAJAAYAAAAHAPn/AAAKAAAAAAAHAPr/AAAKAAEAAAAHAPv/AAAKAAIAAAAHAPz/AAAKAAMAAAAHAP3/AAAKAAQAAAAHAP7/AAAKAAUAAAAHAP//AAAKAAYAAAAIAPn/AAALAAAAAAAIAPr/AAALAAEAAAAIAPv/AAALAAIAAAAIAPz/AAALAAMAAAAIAP3/AAALAAQAAAAIAP7/AAALAAUAAAAIAP//AAALAAYAAAAJAPn/AAAMAAAAAAAJAPr/AAAMAAEAAAAJAPv/AAAMAAIAAAAJAPz/AAAMAAMAAAAJAP3/AAAMAAQAAAAJAP7/AAAMAAUAAAAJAP//AAAMAAYAAAAKAPn/AAANAAAAAAAKAPr/AAANAAEAAAAKAPv/AAANAAIAAAAKAPz/AAANAAMAAAAKAP3/AAANAAQAAAAKAP7/AAANAAUAAAAKAP//AAANAAYAAAALAPn/AAAOAAAAAAALAPr/AAAOAAEAAAALAPv/AAAOAAIAAAALAPz/AAAOAAMAAAALAP3/AAAOAAQAAAALAP7/AAAOAAUAAAALAP//AAAOAAYAAAAMAPn/AAAPAAAAAAAMAPr/AAAPAAEAAAAMAPv/AAAPAAIAAAAMAPz/AAAPAAMAAAAMAP3/AAAPAAQAAAAMAP7/AAAPAAUAAAAMAP//AAAPAAYAAAANAPn/AAAQAAAAAAANAPr/AAAQAAEAAAANAPv/AAAQAAIAAAANAPz/AAAQAAMAAAANAP3/AAAQAAQAAAANAP7/AAAQAAUAAAANAP//AAAQAAYAAAAOAPn/AAARAAAAAAAOAPr/AAARAAEAAAAOAPv/AAARAAIAAAAOAPz/AAARAAMAAAAOAP3/AAARAAQAAAAOAP7/AAARAAUAAAAOAP//AAARAAYAAAAPAPn/AAASAAAAAAAPAPr/AAASAAEAAAAPAPv/AAASAAIAAAAPAPz/AAASAAMAAAAPAP3/AAASAAQAAAAPAP7/AAASAAUAAAAPAP//AAASAAYAAAAQAPn/AAATAAAAAAAQAPr/AAATAAEAAAAQAPv/AAATAAIAAAAQAPz/AAATAAMAAAAQAP3/AAATAAQAAAAQAP7/AAATAAUAAAAQAP//AAATAAYAAAARAPn/AAAUAAAAAAARAPr/AAAUAAEAAAARAPv/AAAUAAIAAAARAPz/AAAUAAMAAAARAP3/AAAUAAQAAAARAP7/AAAUAAUAAAARAP//AAAUAAYAAAASAPn/AAAVAAAAAAASAPr/AAAVAAEAAAASAPv/AAAVAAIAAAASAPz/AAAVAAMAAAASAP3/AAAVAAQAAAASAP7/AAAVAAUAAAASAP//AAAVAAYAAAATAPn/AAAWAAAAAAATAPr/AAAWAAEAAAATAPv/AAAWAAIAAAATAPz/AAAWAAMAAAATAP3/AAAWAAQAAAATAP7/AAAWAAUAAAATAP//AAAWAAYAAAAUAPn/AAAXAAAAAAAUAPr/AAAXAAEAAAAUAPv/AAAXAAIAAAAUAPz/AAAXAAMAAAAUAP3/AAAXAAQAAAAUAP7/AAAXAAUAAAAUAP//AAAXAAYAAAAVAPn/AAAYAAAAAAAVAPr/AAAYAAEAAAAVAPv/AAAYAAIAAAAVAPz/AAAYAAMAAAAVAP3/AAAYAAQAAAAVAP7/AAAYAAUAAAAVAP//AAAYAAYAAAAWAPn/AAAZAAAAAAAWAPr/AAAZAAEAAAAWAPv/AAAZAAIAAAAWAPz/AAAZAAMAAAAWAP3/AAAZAAQAAAAWAP7/AAAZAAUAAAAWAP//AAAZAAYAAAAXAPn/AAAaAAAAAAAXAPr/AAAaAAEAAAAXAPv/AAAaAAIAAAAXAPz/AAAaAAMAAAAXAP3/AAAaAAQAAAAXAP7/AAAaAAUAAAAXAP//AAAaAAYAAAAYAPn/AAAbAAAAAAAYAPr/AAAbAAEAAAAYAPv/AAAbAAIAAAAYAPz/AAAbAAMAAAAYAP3/AAAbAAQAAAAYAP7/AAAbAAUAAAAYAP//AAAbAAYAAAAZAPn/AAAcAAAAAAAZAPr/AAAcAAEAAAAZAPv/AAAcAAIAAAAZAPz/AAAcAAMAAAAZAP3/AAAcAAQAAAAZAP7/AAAcAAUAAAAZAP//AAAcAAYAAAAaAPn/AAAdAAAAAAAaAPr/AAAdAAEAAAAaAPv/AAAdAAIAAAAaAPz/AAAdAAMAAAAaAP3/AAAdAAQAAAAaAP7/AAAdAAUAAAAaAP//AAAdAAYAAAA=")
tile_set = SubResource("TileSet_nbnyv")

[node name="Middle" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAD8//n/AAAAAAAAAAD7//n/AAAAAAAAAAD6//n/AAAAAAAAAAD5//n/AAAAAAAAAAD4//n/AAAAAAAAAAD3//r/AAAAAAAAAAD2//r/AAAAAAAAAAD1//r/AAAAAAAAAAD0//r/AAAAAAAAAADz//r/AAAAAAAAAADz//n/AAAAAAAAAADz//v/AAAAAAAAAADz//z/AAAAAAAAAADz//3/AAAAAAAAAADz//7/AAAAAAAAAADz////AAAAAAAAAADz/wAAAAAAAAAAAAD0//n/AAAAAAAAAAD0//v/AAAAAAAAAAD0//z/AAAAAAAAAAD0//3/AAAAAAAAAAD0//7/AAAAAAAAAAD0////AAAAAAAAAAD0/wAAAAAAAAAAAAD1//n/AAAAAAAAAAD1//v/AAAAAAAAAAD1//z/AAAAAAAAAAD1//3/AAAAAAAAAAD1//7/AAAAAAAAAAD1////AAAAAAAAAAD1/wAAAAAAAAAAAAD2//n/AAAAAAAAAAD2//v/AAAAAAAAAAD2//z/AAAAAAAAAAD2//3/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAAD2/wAAAAAAAAAAAAD3//n/AAAAAAAAAAD3//v/AAAAAAAAAAD3//z/AAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAAAAAAAAAD3////AAAAAAAAAAD3/wAAAAAAAAAAAAD4//r/AAAAAAAAAAD4//v/AAAAAAAAAAD4//z/AAAAAAAAAAD4//3/AAAAAAAAAAD4//7/AAAAAAAAAAD4////AAAAAAAAAAD4/wAAAAAAAAAAAAD5//r/AAAAAAAAAAD5//v/AAAAAAAAAAD5//z/AAAAAAAAAAD5//3/AAAAAAAAAAD5//7/AAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD6//r/AAAAAAAAAAD6//v/AAAAAAAAAAD6//z/AAAAAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD7//r/AAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD8//r/AAAAAAAAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAADz//j/AAAAAAAAAAD0//j/AAAAAAAAAAD1//j/AAAAAAAAAAD2//j/AAAAAAAAAAD3//j/AAAAAAAAAAD4//j/AAAAAAAAAAD5//j/AAAAAAAAAAD6//j/AAAAAAAAAAD7//j/AAAAAAAAAAD8//j/AAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAWAAAAAAAAAAAAAAAXAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAZAAAAAAAAAAAAAAAaAAAAAAAAAAAAAAAbAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAdAAAAAAAAAAAAAAAeAAAAAAAAAAAAAAAfAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAhAAAAAAAAAAAAAAAiAAAAAAAAAAAAAAAjAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAbAPj/AAAAAAAAAAAbAPn/AAAAAAAAAAAbAPr/AAAAAAAAAAAbAPv/AAAAAAAAAAAbAPz/AAAAAAAAAAAbAP3/AAAAAAAAAAAbAP7/AAAAAAAAAAAbAP//AAAAAAAAAAAcAPj/AAAAAAAAAAAcAPn/AAAAAAAAAAAcAPr/AAAAAAAAAAAcAPv/AAAAAAAAAAAcAPz/AAAAAAAAAAAcAP3/AAAAAAAAAAAcAP7/AAAAAAAAAAAcAP//AAAAAAAAAAAdAPj/AAAAAAAAAAAdAPn/AAAAAAAAAAAdAPr/AAAAAAAAAAAdAPv/AAAAAAAAAAAdAPz/AAAAAAAAAAAdAP3/AAAAAAAAAAAdAP7/AAAAAAAAAAAdAP//AAAAAAAAAAAeAPj/AAAAAAAAAAAeAPn/AAAAAAAAAAAeAPr/AAAAAAAAAAAeAPv/AAAAAAAAAAAeAPz/AAAAAAAAAAAeAP3/AAAAAAAAAAAeAP7/AAAAAAAAAAAeAP//AAAAAAAAAAAfAPj/AAAAAAAAAAAfAPn/AAAAAAAAAAAfAPr/AAAAAAAAAAAfAPv/AAAAAAAAAAAfAPz/AAAAAAAAAAAfAP3/AAAAAAAAAAAfAP7/AAAAAAAAAAAfAP//AAAAAAAAAAAgAPj/AAAAAAAAAAAgAPn/AAAAAAAAAAAgAPr/AAAAAAAAAAAgAPv/AAAAAAAAAAAgAPz/AAAAAAAAAAAgAP3/AAAAAAAAAAAgAP7/AAAAAAAAAAAgAP//AAAAAAAAAAAhAPj/AAAAAAAAAAAhAPn/AAAAAAAAAAAhAPr/AAAAAAAAAAAhAPv/AAAAAAAAAAAhAPz/AAAAAAAAAAAhAP3/AAAAAAAAAAAhAP7/AAAAAAAAAAAhAP//AAAAAAAAAAAiAPj/AAAAAAAAAAAiAPn/AAAAAAAAAAAiAPr/AAAAAAAAAAAiAPv/AAAAAAAAAAAiAPz/AAAAAAAAAAAiAP3/AAAAAAAAAAAiAP7/AAAAAAAAAAAiAP//AAAAAAAAAAAjAPj/AAAAAAAAAAAjAPn/AAAAAAAAAAAjAPr/AAAAAAAAAAAjAPv/AAAAAAAAAAAjAPz/AAAAAAAAAAAjAP3/AAAAAAAAAAAjAP7/AAAAAAAAAAAjAP//AAAAAAAAAAAkAPj/AAAAAAAAAAAkAPn/AAAAAAAAAAAkAPr/AAAAAAAAAAAkAPv/AAAAAAAAAAAkAPz/AAAAAAAAAAAkAP3/AAAAAAAAAAAkAP7/AAAAAAAAAAAkAP//AAAAAAAAAAA=")
tile_set = SubResource("TileSet_4meus")

[node name="Foreground" type="TileMapLayer" parent="TileMap"]
z_index = 1
tile_map_data = PackedByteArray("AAANAP7/AAAAAAAAAAANAP//AAAAAAEAAAAOAP7/AAABAAAAAAAOAP//AAABAAEAAAAPAP7/AAACAAAAAAAPAP//AAACAAEAAAAWAP7/AQAAAAAAAAAWAP//AQAAAAEAAAAXAP7/AQABAAAAAAAXAP//AQABAAEAAAAYAP7/AQACAAAAAAAYAP//AQACAAEAAAA=")
tile_set = SubResource("TileSet_48t7m")

[node name="Player" parent="." instance=ExtResource("6_bwckg")]
position = Vector2(48, -70)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-3.33786e-06, -270)

[node name="Items" type="Node" parent="."]

[node name="Wallet01" parent="Items" instance=ExtResource("10_bwckg")]
z_index = -2
position = Vector2(600, -70)

[node name="interact_02" parent="Items/Wallet01" instance=ExtResource("9_7c160")]
z_index = 3
scale = Vector2(4, 4)

[node name="light_01" type="PointLight2D" parent="Items"]
position = Vector2(739, -105.000015)
scale = Vector2(0.9320001, 0.35249993)
color = Color(1, 1, 1, 0.470588)
texture = ExtResource("11_qusso")

[node name="clouds" type="Sprite2D" parent="Items"]
z_index = -2
position = Vector2(955, -160)
scale = Vector2(0.5, 0.5)
texture = ExtResource("16_y5qjx")

[node name="Prompts" type="Node" parent="."]

[node name="stairs_down" parent="Prompts" instance=ExtResource("9_7c160")]
position = Vector2(27, -70)

[node name="Sounds" type="Node" parent="."]

[node name="Wind" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2(748, -162)
stream = ExtResource("12_qusso")
volume_db = 5.0
pitch_scale = 1.5
autoplay = true
max_distance = 2500.0

[node name="Triggers" type="Node" parent="."]

[node name="AtticDoor01" parent="Triggers" instance=ExtResource("11_irxf6")]
position = Vector2(27, -70)

[node name="Texts" type="Node" parent="."]

[node name="AutoDialogueMon05" parent="Texts" instance=ExtResource("15_eqhgu")]
position = Vector2(748, -85)

[node name="AutoDialogueMon06" parent="Texts" instance=ExtResource("15_eqhgu")]
position = Vector2(1384, -85)

[node name="DialogueMon05" parent="Texts" instance=ExtResource("15_eqhgu")]
position = Vector2(265, -70)

[node name="dialogue_text" parent="Texts/DialogueMon05" instance=ExtResource("9_7c160")]

[node name="Border01" type="StaticBody2D" parent="."]
position = Vector2(1685, -140)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border01"]
shape = SubResource("RectangleShape2D_uslh7")

[node name="Border02" type="StaticBody2D" parent="."]
position = Vector2(-171, -140)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border02"]
shape = SubResource("RectangleShape2D_uslh7")
